tests/lean/phashmap_inst_coherence.lean.expected.out
phashmap_inst_coherence.lean:12:6: error: application type mismatch
  PersistentHashMap.find? m
argument
  m
has type
  @PersistentHashMap Nat Nat instBEq instHashableNat
but is expected to have type
  @PersistentHashMap Nat Nat instBEq natDiffHash
phashmap_inst_coherence.lean:12:0: error: failed to synthesize
  Lean.Eval ?m
